--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>EventsFree</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="icon" href="./assets/image/logo.png">
+    <script src="./assets/js/js.js"></script>
 </head>
 
 <body>
     <section class="sctn-1 d-flex justiy-center">
         <div class="container z-index-1">
-            <nav class="d-flex justiy-between align-center pd-top-15 wv-100">
+            <nav class="d-flex justiy-between align-center pd-top-15">
                 <div class="d-flex gap-10 align-center">
                     <img src="./assets/image/logo.png" alt="" class="wv-22">
                     <a href="" class="heading">Events<span>Free</span></a>
