--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="sctn-1 d-flex justiy-center">
         <div class="container z-index-1">
-            <nav class="d-flex justiy-between align-center pd-top-15">
+            <nav class="d-flex justiy-between align-center pd-top-15 pstn-rel">
                 <div class="d-flex gap-10 align-center">
                     <img src="./assets/image/logo.png" alt="" class="wv-22">
                     <a href="" class="heading">Events<span>Free</span></a>
@@ -32,8 +32,15 @@
                     </svg>
                 </span>
             </nav>
-            <div class="pstn-ab hide-menu">
-                
+            <div class="pstn-ab hide-menu pstn-ab d-flex align-center justiy-center">
+                <ul class="d-flex flex-dir gap-35 align-center">
+                    <li><a href="" class="heading-text font-weight-600">HOME</a></li>
+                    <li><a href="" class="heading-text z-index-1">EVENTS</a></li>
+                    <li><a href="" class="heading-text">FEED</a></li>
+                    <li><a href="" class="heading-text">USER NAME</a></li>
+                    <li class="log-out d-flex align-center"><a href="" class="heading-text font-weight-600">Log Out</a>
+                    </li>
+                </ul>
             </div>
             <div class="main pd-top-50 mr-top-30">
                 <p class="p-1">Sed tortor in <span>quisque morbi</span> scelerisque etiam eu.</p>
@@ -481,7 +488,9 @@
                     </div>
                 </div>
             </div>
-            <div class="d-flex justiy-center mr-top-30 pd-bottom-37"><p class="poppins font-weight-400 last size-14">© Credits of companyName belong to companyName.</p></div>
+            <div class="d-flex justiy-center mr-top-30 pd-bottom-37">
+                <p class="poppins font-weight-400 last size-14">© Credits of companyName belong to companyName.</p>
+            </div>
         </div>
     </section>
 </body>
