--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     <section class="sctn-5">
         <div class="container">
             <div class="row pd-top-50 pd-bottom-50">
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-12 col-lg-6">
                     <div>
                         <div class="d-flex gap-10 align-center">
                             <img src="./assets/image/logo.png" alt="" class="wv-22">
@@ -431,7 +431,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-12 col-lg-6">
                     <div class="row">
                         <div class="col-6 col-sm-6 col-md-3">
                             <div class="d-flex flex-dir">
