--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <button class="btn-1 d-flex align-center font-weight-600">Get Started</button>
                     <button class="btn-1 btn-2 d-flex align-center font-weight-400">Learn more</button>
                 </div>
-                <div class="d-flex flex-w">
+                <div class="d-flex flex-w justiy-center-1">
                     <div
                         class="row width-870 row-color wv-100 radius-150 align-center height-108 mr-bottom-47 pstn-rel box-11 border-r">
                         <div class="pstn-rel border-1 col-12 col-lg-3 col-sm-6 col-md-4">
