--- a/index.html
+++ b/index.html
@@ -436,19 +436,19 @@
                         <div class="col-6 col-sm-6 col-md-3">
                             <div class="d-flex flex-dir">
                                 <p class="number-1 size-14">SERVICES</p>
-                                <a href="" class="text-3 size-12">About</a>
-                                <a href="" class="text-3 size-12">News</a>
-                                <a href="" class="text-3 size-12">ullamcorper</a>
-                                <a href="" class="text-3 size-12">Contact</a>
+                                <a href="" class="text-3 size-12 width-fit">About</a>
+                                <a href="" class="text-3 size-12 width-fit">News</a>
+                                <a href="" class="text-3 size-12 width-fit">ullamcorper</a>
+                                <a href="" class="text-3 size-12 width-fit">Contact</a>
                             </div>
                         </div>
                         <div class="col-6 col-sm-6 col-md-3">
                             <div class="d-flex flex-dir">
                                 <p class="number-1 size-14">EVENTS</p>
-                                <a href="" class="text-3 size-12">ullamcorper</a>
-                                <a href="" class="text-3 size-12">ullamcorper</a>
-                                <a href="" class="text-3 size-12">ullamcorper</a>
-                                <a href="" class="text-3 size-12">ullamcorper</a>
+                                <a href="" class="text-3 size-12 width-fit">ullamcorper</a>
+                                <a href="" class="text-3 size-12 width-fit">ullamcorper</a>
+                                <a href="" class="text-3 size-12 width-fit">ullamcorper</a>
+                                <a href="" class="text-3 size-12 width-fit">ullamcorper</a>
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-md-6">
