updataed the sir mistakes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                             </div>
                         </div>
                         <div class="pstn-rel border-1 col-12 col-lg-3 col-sm-6 col-md-4">
-                            <div class="right-border width-85 justiy-center-1 pstn-rel d-flex align-center gap-10  pd-tb-17">
+                            <div
+                                class="right-border width-85 justiy-center-1 pstn-rel d-flex align-center gap-10  pd-tb-17">
                                 <span>
                                     <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -305,7 +306,7 @@
                         suscipit. Suspendisse maximus
                         ipsum sem. Donec ut justo et leo congue lacinia vitae nec arcu.
                     </p>
-                    <a href="" class="Explore size-16 pd-top-15 poppins cursor-p">
+                    <a href="" class="Explore size-16  poppins cursor-p">
                         LEARN MORE
                     </a>
                 </div>
